--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "api-error-handler": "^1.0.0",
     "body-parser": "^1.18.3",
+    "event-stream": "^3.3.4",
     "express": "^4.16.3",
     "helmet": "^3.13.0",
     "md5.js": "^1.3.5",
